--- a/src/home_components/about/about.css
+++ b/src/home_components/about/about.css
@@ -1,16 +1,15 @@
-.container-fluid {
-  padding: 20px;
-}
-.row {
-  display: flex;
-  justify-content: start;
-  align-items: start;
-}
-
 .about-heading {
   display: flex;
   justify-content: center;
   background-color: #264de4;
+}
+.AlignImage {
+  margin-left: 20rem;
+}
+.developer-bio{
+  font-family: 'Arial', sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
 }
 .User-Image-EXP {
   border-radius: 10%;
@@ -32,77 +31,60 @@
   padding: 20px;
   font-size: 15px;
   color: white;
+  margin-bottom: 1rem;
 }
-.skill-container {
+
+.developer-bio-container {
   display: flex;
-  flex-direction: row;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #f8f9fa;
 }
 
-.react-icon-skill {
-  font-size: 50px;
-  color: #61dafb;
-  animation: rotate 15s linear infinite;
+.developer-bio {
+  max-width: 800px;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333333;
 }
 
-.javascript-icon-skill {
-  font-size: 50px;
-  color: #f0db4f;
+.developer-bio p {
+  margin: 0;
 }
 
-.html-icon-skill {
-  font-size: 50px;
-  color: #e34c26;
-}
-.css-icon-skill {
-  font-size: 50px;
-  color: #264de4;
-}
-.bootstrap-icon-skill {
-  font-size: 50px;
-  color: #7952b3;
-}
-
-.flutter-icon-skill {
-  font-size: 50px;
-  color: #02569b;
-}
-.Image-div {
-  background-color: #61dafb;
-}
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 768px) {
+  .developer-bio {
+      padding: 15px;
   }
 }
+
+@media (max-width: 480px) {
+  .developer-bio {
+      padding: 10px;
+  }
+}
+
 
 @media only screen and (max-width: 992px) {
+  .User-Image-EXP {
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+  }
   .AlignImage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
-  .Image-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .User-details-EXP {
-    display: flex;
-    flex-direction: column;
     margin-left: 0rem;
-    color: white;
-  }
-  .container-fluid {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-
 }
