--- a/src/home_components/experience/experience.css
+++ b/src/home_components/experience/experience.css
@@ -1,6 +1,6 @@
 .ExP-container {
-  border: 1px solid black;
-  border-radius: 5px;
+  margin-top: 15rem;
+
 }
 .icon {
   font-size: 2.5rem;
