--- a/src/shared/components/nav.css
+++ b/src/shared/components/nav.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 nav {
   display: flex;
   flex-direction: row;
@@ -11,7 +11,7 @@ nav {
   margin-bottom: 2rem;
 }
 
-nav h1{
+nav h1 {
   font-family: "Rubik", sans-serif;
   font-size: 3rem;
   font-weight: 400;
@@ -39,15 +39,14 @@ nav li {
 }
 
 nav li:hover {
-  transform: scale(1.1); 
+  transform: scale(1.1);
 }
-
 
 @media only screen and (max-width: 992px) {
   .nav-elements {
     display: none;
   }
-  nav{
+  nav {
     margin-left: 2rem;
     margin-right: 2rem;
   }
@@ -56,6 +55,11 @@ nav li:hover {
     align-items: end;
     font-size: 40px;
     color: black;
+  }
+  nav h1 {
+    font-family: "Rubik", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
   }
 }
 
